<?xml version="1.0"?>
<package>
  <name>box_filter</name>
  <version>1.0.0</version>
  <description>filters point cloud data in a specified box</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

  <license>BSD</license>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export><filters plugin="${prefix}/box_filter_plugin.xml" /></export>
</package>
