<?xml version="1.0"?>
<package>
  <name>laser_ps3_control</name>
  <version>1.0.0</version>
  <description>ps3 control sends commands to handle the rotunit speed and to start a scan</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rotunit</build_depend>
  <build_depend>rotunit_snapshotter</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rotunit_snapshotter</run_depend>
  <run_depend>rotunit</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
