<?xml version="1.0"?>
<package>
  <name>pluto_bringup</name>
  <license>BSD</license>
  <version>1.0.0</version>
  <description>Collection of launch- and config files to bringup the robot pluto </description>
  <url type="website">http://wiki.ros.org/pluto_robot/pluto_bringup</url>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pluto_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>volksbot_driver</run_depend>
  <run_depend>uos_rotunit_driver</run_depend>
  <run_depend>kurt_bringup</run_depend>
  <run_depend>uos_rotunit_snapshotter</run_depend>
  <run_depend>uos_rotunit_teleop</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>battery_guard</run_depend>

</package>
