<?xml version="1.0"?>
<package>
  <name>pluto_description</name>
  <license>BSD</license>
  <version>1.0.0</version>
  <description>Contains the urdf files which describes the robot pluto </description>
  <url type="website">http://wiki.ros.org/pluto_description</url>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>uos_common_urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
