<?xml version="1.0"?>
<package format="2">
  <name>pluto_description</name>
  <license>BSD-3</license>
  <version>1.0.0</version>
  <description>Contains the urdf and mesh files which describes the robot Pluto</description>
  <url type="website">http://wiki.ros.org/pluto_robot/pluto_description</url>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>uos_common_urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

</package>
