<?xml version="1.0"?>
<package>
  <name>pluto_gazebo</name>
  <license>BSD</license>
  <version>1.0.0</version>
  <description>Collection of launch files to spawn the robot plut in gazebo worlds</description>
  <url type="website">http://wiki.ros.org/pluto_robot/pluto_gazebo</url>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>uos_gazebo_worlds</run_depend>
  <run_depend>pluto_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
