<?xml version="1.0"?>
<package>
  <name>pluto_install</name>
  <version>1.0.0</version>
  <description>The pluto_install package provides an install shell script or installation instructions in the README.text</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
