<?xml version="1.0"?>
<package>
    <name>pluto_levers</name>
    <version>0.0.0</version>
    <description>The pluto_levers package</description>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>

    <license>BSD</license>

    <author email="dazzel@mailbox.org">Christian Swan</author>
    <author email="johan@vonbehren.eu">Johan M. von Behren</author>
    <author email="spuetz@uos.de">Johan M. von Behren</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pluto_bringup</build_depend>
    <build_depend>message_filters</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pluto_bringup</run_depend>
    <run_depend>message_filters</run_depend>

</package>
