<?xml version="1.0"?>
<package format="2">
  <name>pluto_navigation</name>
  <version>0.1.0</version>
  <description>
    This package provides a couple of map files and configurations to perform path planning in
    3D on a mesh surface. The meshes and their attributes are stored in, and loaded from HDF5
    map files. The robot navigation with Pluto can be performed in simulation or with the real
    robot Pluto of the Osnabrück University.
  </description>
  <url type="website">http://wiki.ros.org/pluto_robot/pluto_navigation</url>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mbf_mesh_nav</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>dijkstra_mesh_planner</exec_depend>
  <exec_depend>wave_front_planner</exec_depend>
  <exec_depend>pluto_bringup</exec_depend>
  <exec_depend>pluto_gazebo</exec_depend>

</package>
