<?xml version="1.0"?>
<package>
  <name>pluto_robot</name>
  <version>1.0.0</version>
  <description>The pluto_robot package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pluto_robot</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <run_depend>pluto_description</run_depend>
  <run_depend>pluto_bringup</run_depend>
  <run_depend>pluto_gazebo</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage />  
  </export>

</package>
