<?xml version="1.0"?>
<package format="2">
  <name>pluto_robot</name>
  <version>1.0.0</version>
  <description>The pluto_robot package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <url type="website">http://wiki.ros.org/pluto_robot</url>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <exec_depend>pluto_bringup</exec_depend>
  <exec_depend>pluto_description</exec_depend>
  <exec_depend>pluto_gazebo</exec_depend>
  <exec_depend>pluto_navigation</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage />  
  </export>

</package>
