<?xml version="1.0"?>
<package>
  <name>rotunit</name>
  <version>1.0.0</version>
  <description>driver for the uos-rotunit</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
